--- a/config/locales/en_NZ.yml
+++ b/config/locales/en_NZ.yml
@@ -1170,7 +1170,7 @@ en_NZ:
       footer_contact_email: "Email us"
       footer_nav_headline: "Navigate"
       footer_join_headline: "Join us"
-      footer_join_body: "Create a listing, shop or group directory on the Open Food Network."
+      footer_join_body: "Create a listing, build a shop or group directory on the Open Food Network."
       footer_join_cta: "Tell me more!"
       footer_legal_call: "Read our"
       footer_legal_tos: "Terms and conditions"
@@ -1378,7 +1378,7 @@ en_NZ:
   system_step1: "1. Search"
   system_step1_text: "Search our diverse, independent shops for seasonal local food. Search by neighbourhood and food category, or whether you prefer delivery or pickup."
   system_step2: "2. Shop"
-  system_step2_text: "Transform your transactions with affordable local food from diverse producers and hubs. Know the stories behind your food and the people who make it!"
+  system_step2_text: "Choose what you want, checkout as guest or make an account, you are good to go. Its that simple. If you'd like a box every week then ask for a subscription."
   system_step3: "3. Pick-up / Delivery"
   system_step3_text: "Hang on for your delivery, or visit your producer or hub for a more personal connection with your food. Food shopping as diverse as nature intended it."
   cta_headline: "Shopping that makes the world a better place."
