Update all locales with the latest Transifex translations

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -13,6 +13,7 @@ ar:
         email: الايميل الالكتروني للعميل
       spree/payment:
         amount: القيمة
+        state: ولاية
       spree/product:
         primary_taxon: "نوع المنتج "
         supplier: "المورد"
