--- a/config/locales/en_IN.yml
+++ b/config/locales/en_IN.yml
@@ -13,6 +13,7 @@ en_IN:
         email: Customer E-Mail
       spree/payment:
         amount: Amount
+        state: State
       spree/product:
         primary_taxon: "Product Category"
         supplier: "Supplier"
