--- a/config/locales/en_ZA.yml
+++ b/config/locales/en_ZA.yml
@@ -13,6 +13,7 @@ en_ZA:
         email: Customer E-Mail
       spree/payment:
         amount: Amount
+        state: Province
       spree/product:
         primary_taxon: "Product Category"
         supplier: "Supplier"
