--- a/config/locales/es_CR.yml
+++ b/config/locales/es_CR.yml
@@ -13,6 +13,7 @@ es_CR:
         email: Correo electrónico del cliente
       spree/payment:
         amount: Cantidad
+        state: Provincia
       spree/product:
         primary_taxon: "Categoría del producto"
         supplier: "Proveedor"
