--- a/config/locales/fr_BE.yml
+++ b/config/locales/fr_BE.yml
@@ -13,6 +13,7 @@ fr_BE:
         email: Adresse électronique acheteur
       spree/payment:
         amount: Montant
+        state: Statut de la commande
       spree/product:
         primary_taxon: "Catégorie de Produit"
         supplier: "Fournisseur"
