--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -13,6 +13,7 @@ pt:
         email: Email do/a Consumidor/a
       spree/payment:
         amount: Quantia
+        state: Estado
       spree/product:
         primary_taxon: "Categoria de Produto"
         supplier: "Fornecedor"
