--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3332,7 +3332,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
             error_saving_payment: Error saving payment
             submitting_payment: Submitting payment...
           paypal:
-            no_payment_via_admin_backend: No Payment Via Admin Backend
+            no_payment_via_admin_backend: Paypal payments cannot be captured in the Backoffice
       products:
         image_upload_error: "The product image was not recognised. Please upload an image in PNG or JPG format."
         new:
